<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/ElonMuskStyle"
        android:paddingBottom="20dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/androidIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/personName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            android:padding="13dp"
            android:text="@string/name"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enterHobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/autoFillHobbies"
            android:ems="10"
            android:hint="@string/enterHobbyHint"
            android:inputType="textPersonName"
            android:paddingTop="50dp"
            android:textColorHint="#5C6BC0"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#3F51B5"
            android:backgroundTintMode="src_in"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/doneButton" />

        <TextView
            android:id="@+id/hobbiesText"
            style="@style/ElonMuskStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <ScrollView
            style="@style/ElonMuskStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="20dp"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/personBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif"
                android:lineSpacingMultiplier="1.2"
                android:paddingTop="20dp"
                android:text="@string/Elon_Musk_Bio"
                android:textColor="#FFFFFF" />
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>